# RP2350-Pocket-Operator-Clone

./: README.md
firmware/: CMakeLists.txt
firmware/src/: blink.c  i2s_silence.c
