cmake_minimum_required(VERSION 3.13)
include(pico_sdk_import.cmake)
include(pico_extras_import.cmake)
project(po33_clone C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
pico_sdk_init()

add_executable(i2s_silence src/i2s_silence.c)
target_link_libraries(i2s_silence pico_stdlib pico_audio_i2s)
pico_add_extra_outputs(i2s_silence)
